// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography [common] example testing should match snapshot(s) for 01.variants 1`] = `
<h1
  className="lucid-Typography lucid-Typography-h1"
>
  h1. Heading
</h1>
`;

exports[`Typography [common] example testing should match snapshot(s) for 01.variants 2`] = `
<h2
  className="lucid-Typography lucid-Typography-h2"
>
  h2. Heading
</h2>
`;

exports[`Typography [common] example testing should match snapshot(s) for 01.variants 3`] = `
<h3
  className="lucid-Typography lucid-Typography-h3"
>
  h3. Heading
</h3>
`;

exports[`Typography [common] example testing should match snapshot(s) for 01.variants 4`] = `
<p
  className="lucid-Typography lucid-Typography-p"
>
  p. paragraph text
</p>
`;

exports[`Typography [common] example testing should match snapshot(s) for 01.variants 5`] = `
<p
  className="lucid-Typography lucid-Typography-tabular"
>
  tabular. text for tables
</p>
`;

exports[`Typography [common] example testing should match snapshot(s) for 01.variants 6`] = `
<a
  className="lucid-Typography lucid-Typography-a"
>
  a. link text
</a>
`;

exports[`Typography [common] example testing should match snapshot(s) for 01.variants 7`] = `
<pre
  className="lucid-Typography lucid-Typography-pre"
>
  pre. preformatted text
</pre>
`;

exports[`Typography [common] example testing should match snapshot(s) for 01.variants 8`] = `
<code
  className="lucid-Typography lucid-Typography-code"
>
  code. snazzy code
</code>
`;

exports[`Typography [common] example testing should match snapshot(s) for 01.variants 9`] = `
<kbd
  className="lucid-Typography lucid-Typography-kbd"
>
  kbd. keyboard inputs
</kbd>
`;

exports[`Typography [common] example testing should match snapshot(s) for 01.variants 10`] = `
<samp
  className="lucid-Typography lucid-Typography-samp"
>
  samp. sample code outputs
</samp>
`;

exports[`Typography [common] example testing should match snapshot(s) for 01.variants 11`] = `
<span
  className="lucid-Typography lucid-Typography-span"
>
  span. sample code outputs with help bubble
  <div
    className="HelpBubble"
  >
    <ToolTip
      alignment="start"
      direction="right"
      name="I am a div under typography"
    >
      <ToolTip.Title
        className="HelpBubble-title"
      >
        look at me
      </ToolTip.Title>
      <ToolTip.Target>
        <HelpIcon
          aspectRatio="xMidYMid meet"
          color="primary"
          isClickable={false}
          isDisabled={false}
          onClick={[Function]}
          onSelect={[Function]}
          size={12}
          viewBox="0 0 16 16"
        />
      </ToolTip.Target>
    </ToolTip>
  </div>
</span>
`;

exports[`Typography [common] example testing should match snapshot(s) for 02.nested 1`] = `
<h1
  className="lucid-Typography lucid-Typography-h1"
>
  Title
</h1>
`;

exports[`Typography [common] example testing should match snapshot(s) for 02.nested 2`] = `
<h2
  className="lucid-Typography lucid-Typography-h2"
>
  subtitle
</h2>
`;

exports[`Typography [common] example testing should match snapshot(s) for 02.nested 3`] = `
<p
  className="lucid-Typography lucid-Typography-p"
>
  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pencil mustachioed graeme souness, mustachioed waxy gurn rugged el snort graeme souness burt reynolds educated village people boogie nights pencil man of the year 1986, pencil village people graeme souness rugged boogie nights mouthbrow educated burt reynolds waxy gurn man of the year 1986 des lynam charming villain mustachioed cardinal richelieu el snort. Borat d’artagnan hungarian testosterone trophy frontiersman hairy kiss. beefeater chevron, hairy kiss. cardinal richelieu groucho-a-like testosterone trophy d’artagnan dick van dyke rugged chevron Droopy frontiersman borat beefeater hungarian chevron, cardinal richelieu d’artagnan beefeater el snort Droopy dodgy uncle clive groucho-a-like hairy kiss. chevron frontiersman chevron dick van dyke walrus leader of men rugged borat bad guy testosterone trophy groucho-a-like alpha trion hungarian.
  <br />
  <br />
  <Typography
    style={
      Object {
        "display": "block",
      }
    }
    variant="a"
  >
    Like!
  </Typography>
  <Typography
    style={
      Object {
        "display": "block",
      }
    }
    variant="a"
  >
    Subscribe!
  </Typography>
  <br />
  <Typography
    variant="h3"
  >
    Code Example
  </Typography>
  <Typography
    variant="code"
  >
    npm install all-the-things
  </Typography>
</p>
`;

exports[`Typography [common] example testing should match snapshot(s) for 02.nested 4`] = `
<a
  className="lucid-Typography lucid-Typography-a"
  style={
    Object {
      "display": "block",
    }
  }
>
  Like!
</a>
`;

exports[`Typography [common] example testing should match snapshot(s) for 02.nested 5`] = `
<a
  className="lucid-Typography lucid-Typography-a"
  style={
    Object {
      "display": "block",
    }
  }
>
  Subscribe!
</a>
`;

exports[`Typography [common] example testing should match snapshot(s) for 02.nested 6`] = `
<h3
  className="lucid-Typography lucid-Typography-h3"
>
  Code Example
</h3>
`;

exports[`Typography [common] example testing should match snapshot(s) for 02.nested 7`] = `
<code
  className="lucid-Typography lucid-Typography-code"
>
  npm install all-the-things
</code>
`;
